@@ -1,3 +1,8 @@
+2007-06-17 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.08)
+
+	* Plan9.xs: PERL_UNUSED_ARG() for all Plan9_intuit arguments 
+	* Plan9.h: Updated engine_plan9 to run on the new blead API
+
 2007-05-19 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.07)
 
 	* t/import.t: New test added while trying to write import/unimport
